--- a/app/views/home/_case_admin_district_totals.html.erb
+++ b/app/views/home/_case_admin_district_totals.html.erb
@@ -1,37 +1,49 @@
 <div class="panel">
   <div class="panel_header">
-    <h4>Cases</h4>
+    <h4><%= t('dashboard.case_stats') %></h4>
     <table cellspacing="0" cellpadding="0" class="table-floating-header">
       <thead>
       <tr>
-        <th></th>
-        <th>Cases</th>
-        <th>New (last week)</th>
-        <th>New (this week)</th>
-        <th>Closed (last week)</th>
-        <th>Closed (this week)</th>
+        <th>
+
+        </th>
+        <th>
+          <%= t('dashboard.case_stats').html_safe %>
+        </th>
+        <th>
+          <%= t('dashboard.new_last_week').html_safe %>
+        </th>
+        <th>
+          <%= t('dashboard.new_last_week').html_safe %>
+        </th>
+        <th>
+          <%= t('dashboard.closed_last_week').html_safe %>
+        </th>
+        <th>
+          <%= t('dashboard.closed_this_week').html_safe %>
+        </th>
       </tr>
       </thead>
     </table>
   </div>
   <div class="panel_content no-padding panel_main">
     <% if district_stats.present? %>
-      <table cellspacing="0" cellpadding="0" class="table-floating-header">
+      <table cellspacing="0" cellpadding="0" class="table-floating-header extra">
         <tbody>
           <% district_stats.each do |key, val| %>
             <tr>
               <td class="id_column"><%= key %></td>
-              <td><%= val[:totals] %></td>
-              <td><%= val[:new_last_week] %></td>
-              <td><%= val[:new_this_week] %></td>
-              <td><%= val[:closed_last_week] %></td>
-              <td><%= val[:closed_this_week] %></td>
+              <td><%= build_district_stat_link(val[:totals], ['child_status=Open', 'record_state=true', "location=#{key}"] ,model)  %></td>
+              <td><%= build_district_stat_link(val[:new_last_week], ['child_status=Open', 'record_state=true', "location=#{key}", "created_at=#{last_week}"], model) %></td>
+              <td><%= build_district_stat_link(val[:new_this_week], ['child_status=Open', 'record_state=true', "location=#{key}", "created_at=#{this_week}"], model) %></td>
+              <td><%= build_district_stat_link(val[:closed_last_week], ['child_status=Closed', 'record_state=true', "location=#{key}", "date_closure=#{last_week}"], model) %></td>
+              <td><%= build_district_stat_link(val[:closed_this_week], ['child_status=Closed', 'record_state=true', "location=#{key}", "date_closure=#{this_week}"], model) %></td>
             </tr>
           <% end %>
         </tbody>
       </table>
     <% else %>
-      <p class="no-content">Placeholder</p>
+      <p class="no-content"><%= t('dashboard.no_case_stats') %></p>
     <% end %>
   </div>
 </div>
