--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -40,9 +40,10 @@
       <% if @display_admin_dashboard %>
         <%= render 'case_admin_district_totals', district_stats: @district_stats, model: Child %>
       <% elsif @display_manager_dashboard %>
+        <%= render 'case_manager_case_totals', records: @aggregated_case_worker_stats, model: Child %>
         <%# render 'recent_activities', recent_activities: @recent_activities, model: Child %>
         <%# render 'scheduled_activities', scheduled_activities: @scheduled_activities, model: Child %>
-        <%# render 'caseload', records: @aggregated_case_worker_stats, model: Child %>
+        <%= render 'caseload', records: @aggregated_case_worker_stats, model: Child %>
       <% else %>
         <%= render 'case_counts',
                    new_cases: @new_cases,
