SL-310 custom export modal.
Custom export dialog is bigger and when the reveal dialog calculate the top position
start at 10px, this make did not fit in the screen. Try make Custom export fixed position at 0px.

--- a/app/assets/stylesheets/primero/forms_fields.scss
+++ b/app/assets/stylesheets/primero/forms_fields.scss
@@ -549,6 +549,10 @@ span.postfix_val {
 // Custom Exports
 ////////////////////////////////////////////////
 
+#custom-exports {
+    top:0px;
+}
+
 #custom-exports, #pdf-exports {
 
   .chosen-container-single, .chosen-container-multi {
