--- a/app/views/home/_case_manager_totals_by_risk_level.html.erb
+++ b/app/views/home/_case_manager_totals_by_risk_level.html.erb
@@ -2,18 +2,18 @@
   <%= I18n.translate('dashboard.count_risk_level_total',
                      case_count(
                          {
-                            name: :risk_level,
-                            stat: :high_total,
-                            filter: index_filters(['child_status=Open', 'risk_level=High', 'record_state=true']),
-                            stat_type: 'high'
+                             name: :risk_level,
+                             stat: :high_total,
+                             filter: index_filters(['child_status=Open', 'risk_level=High', 'record_state=true']),
+                             stat_type: 'high'
                          }, stats, model)).html_safe %>
   <%= I18n.translate('dashboard.count_risk_level_new',
                      case_count(
                          {
-                            name: :risk_level,
-                            stat: :high,
-                            filter: index_filters(['child_status=Open', 'risk_level=High', 'new', 'record_state=true']),
-                            stat_type: 'high'
+                             name: :risk_level,
+                             stat: :high,
+                             filter: index_filters(['child_status=Open', 'risk_level=High', 'new_other', 'record_state=true']),
+                             stat_type: 'high'
                          }, stats, model)).html_safe %>
 </div>
 <div>
@@ -30,7 +30,7 @@
                          {
                              name: :risk_level,
                              stat: :medium,
-                             filter: index_filters(['child_status=Open', 'risk_level=Medium', 'new', 'record_state=true']),
+                             filter: index_filters(['child_status=Open', 'risk_level=Medium', 'new_other', 'record_state=true']),
                              stat_type: 'medium'
                          }, stats, model)).html_safe %>
 </div>
@@ -48,7 +48,7 @@
                          {
                              name: :risk_level,
                              stat: :low,
-                             filter: index_filters(['child_status=Open', 'risk_level=Low', 'new', 'record_state=true']),
+                             filter: index_filters(['child_status=Open', 'risk_level=Low', 'new_other', 'record_state=true']),
                              stat_type: 'low'
                          }, stats, model)).html_safe %>
 </div>
