--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -43,7 +43,7 @@
         <%= render 'case_manager_case_totals', records: @aggregated_case_worker_stats, model: Child %>
         <%# render 'recent_activities', recent_activities: @recent_activities, model: Child %>
         <%# render 'scheduled_activities', scheduled_activities: @scheduled_activities, model: Child %>
-        <%= render 'caseload', records: @aggregated_case_worker_stats, model: Child %>
+        <%# render 'caseload', records: @aggregated_case_worker_stats, model: Child %>
       <% else %>
         <%= render 'case_counts',
                    new_cases: @new_cases,
