--- a/app/views/children/_filter.html.erb
+++ b/app/views/children/_filter.html.erb
@@ -48,6 +48,9 @@
     <% if filters_to_show.include? 'Current Location' %>
       <%= build_filter_location(t("cases.filter_by.current_location"), 'location_current') %>
     <% end %>
+    <% if filters_to_show.include? 'District' %>
+      <%= build_filter_checkboxes(t("cases.filter_by.district"), 'owned_by_location_district', @options_districts, { multi: true }, false) %>
+    <% end %>
     <% if filters_to_show.include? 'Registration Date' %>
       <%= render "record_shared/filter_date", record: 'cases', date_field_title: 'registration_date', date_field: 'registration_date' %>
     <% end %>
