--- a/app/views/home/_case_manager_totals_by_referred.html.erb
+++ b/app/views/home/_case_manager_totals_by_referred.html.erb
@@ -5,7 +5,7 @@
                        case_count({case_worker: k, count: v[:total_cases], filter: index_filters(['child_status:Open', "referred_user=#{k}", 'record_state=true'])}, {}, model)).html_safe %>
     <%= I18n.translate('dashboard.count_referrals_new',
                        case_count({count: v[:new_cases],
-                                   filter: index_filters(['child_status=Open', 'new', "referred_user=#{k}", 'record_state=true'])}, {}, model)).html_safe %>
+                                   filter: index_filters(['child_status=Open', 'new_other', "referred_user=#{k}", 'record_state=true'])}, {}, model)).html_safe %>
   </div>
   <% end %>
 <% end %>
