SL-317 restrict access to name field in reports.
User with read permission only will not see the hide on view page
fields when is creating reports. select boxes will filter those fields.

--- a/app/views/reports/_editable.html.erb
+++ b/app/views/reports/_editable.html.erb
@@ -1,5 +1,17 @@
 <%= resource_edit_field(object, 'name', 'report.name', 'text_field', true) %>
 <%= resource_edit_field(object, 'description', 'report.description', 'text_area') %>
+<%
+
+aggregate_by_options = {}
+aggregate_counts_from_options = {}
+
+if @report.record_type.present?
+  readonly = is_readonly_user?(@report.record_type)
+  aggregate_by_options = Report.all_reportable_fields_by_form(@report.modules, @report.record_type, @current_user, readonly)
+  aggregate_counts_from_options = Report.all_reportable_fields_by_form(@report.modules, @report.record_type, @current_user, readonly, Report::AGGREGATE_COUNTS_FIELD_TYPES)
+end
+
+%>
 <%# Modules input %>
 <div class="row">
   <div class="medium-3 columns">
@@ -60,9 +72,7 @@
       <%= form_builder.select(
             :aggregate_by,
             grouped_options_for_select(
-              select_options_fields_grouped_by_form(
-                Report.all_reportable_fields_by_form(@report.modules, @report.record_type, @current_user)
-              ),
+              select_options_fields_grouped_by_form(aggregate_by_options),
               @report.aggregate_by
             ),
             {}, {multiple: true, :'data-placeholder' => t("fields.select_box_empty_item")}
@@ -86,9 +96,7 @@
       <%= form_builder.select(
             :disaggregate_by,
             grouped_options_for_select(
-              select_options_fields_grouped_by_form(
-                Report.all_reportable_fields_by_form(@report.modules, @report.record_type, @current_user)
-              ),
+              select_options_fields_grouped_by_form(aggregate_by_options),
               @report.disaggregate_by
             ),
             {}, {multiple: true, :'data-placeholder' => t("fields.select_box_empty_item")}
@@ -112,9 +120,7 @@
       <%= form_builder.select(
             :aggregate_counts_from,
             grouped_options_for_select(
-              select_options_fields_grouped_by_form(
-                Report.all_reportable_fields_by_form(@report.modules, @report.record_type, @current_user, Report::AGGREGATE_COUNTS_FIELD_TYPES)
-              ),
+              select_options_fields_grouped_by_form(aggregate_counts_from_options),
               @report.aggregate_counts_from
             ),
             {include_blank: t("fields.select_box_empty_item")}, {:'data-placeholder' => t("fields.select_box_empty_item")}
