SL-315 QA8: Edit form script crashing on IE.
Replace unsupported property for IE.

Remove event registered twice, this was causing on IE move back twice and lost the focus
of the fields editor.

--- a/app/views/form_section/_edit_fields.html.erb
+++ b/app/views/form_section/_edit_fields.html.erb
@@ -102,7 +102,7 @@
 </table>
 
 <div id="add_field_modal" class="reveal-modal" data-reveal>
-  <a class="close-reveal-modal cancel_field_modal">&#215;</a>
+  <a class="close-reveal-modal">&#215;</a>
   <div class="sidebar_help">
     <%= @field.present? && @field.type.present? ? t("form_section.modal_sidebar_help_selected") : t("form_section.modal_sidebar_help") %>
   </div>
