SL-335: index page should show open and valid

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -6,7 +6,7 @@
             <ul class="left">
               <li><%= link_to t("navigation.home"), root_path, class: current_menu("root") %></li>
               <% if can? :read, Child %>
-                <li><%= link_to t("navigation.cases"), cases_path(scope: {:child_status => "list||Open"}), class: current_menu("cases") %></li>
+                <li><%= link_to t("navigation.cases"), cases_path(scope: {:child_status => "list||Open", :record_state => "list||true"}), class: current_menu("cases") %></li>
               <% end  %>
               <% if can? :read, TracingRequest %>
                 <li><%= link_to t("navigation.tracing_request"), tracing_requests_path, class: current_menu("tracings") %></li>
