--- a/app/views/reports/_editable.html.erb
+++ b/app/views/reports/_editable.html.erb
@@ -1,17 +1,5 @@
 <%= resource_edit_field(object, 'name', 'report.name', 'text_field', true) %>
 <%= resource_edit_field(object, 'description', 'report.description', 'text_area') %>
-<%
-
-aggregate_by_options = {}
-aggregate_counts_from_options = {}
-
-if @report.record_type.present?
-  readonly = is_readonly_user?(@report.record_type)
-  aggregate_by_options = Report.all_reportable_fields_by_form(@report.modules, @report.record_type, @current_user, readonly)
-  aggregate_counts_from_options = Report.all_reportable_fields_by_form(@report.modules, @report.record_type, @current_user, readonly, Report::AGGREGATE_COUNTS_FIELD_TYPES)
-end
-
-%>
 <%# Modules input %>
 <div class="row">
   <div class="medium-3 columns">
@@ -72,7 +60,7 @@ end
       <%= form_builder.select(
             :aggregate_by,
             grouped_options_for_select(
-              select_options_fields_grouped_by_form(aggregate_by_options),
+              select_options_fields_grouped_by_form(@reportable_fields),
               @report.aggregate_by
             ),
             {}, {multiple: true, :'data-placeholder' => t("fields.select_box_empty_item")}
@@ -96,7 +84,7 @@ end
       <%= form_builder.select(
             :disaggregate_by,
             grouped_options_for_select(
-              select_options_fields_grouped_by_form(aggregate_by_options),
+              select_options_fields_grouped_by_form(@reportable_fields),
               @report.disaggregate_by
             ),
             {}, {multiple: true, :'data-placeholder' => t("fields.select_box_empty_item")}
@@ -120,7 +108,7 @@ end
       <%= form_builder.select(
             :aggregate_counts_from,
             grouped_options_for_select(
-              select_options_fields_grouped_by_form(aggregate_counts_from_options),
+              select_options_fields_grouped_by_form(@reportable_fields_aggregate_counts_from),
               @report.aggregate_counts_from
             ),
             {include_blank: t("fields.select_box_empty_item")}, {:'data-placeholder' => t("fields.select_box_empty_item")}
