--- a/app/views/children/_filter.html.erb
+++ b/app/views/children/_filter.html.erb
@@ -44,7 +44,7 @@
       <%= build_filter_checkboxes(t("cases.filter_by.urgent_protection_concern"), 'urgent_protection_concern', [t("true"), t("false")]) %>
     <% end %>
     <% if filters_to_show.include? 'Protection Concerns' %>
-      <%= build_filter_checkboxes(t("cases.filter_by.protection_concerns"), 'protection_concerns', @options_protection_concerns, { multi: true }, false) %>
+      <%= build_filter_checkboxes(t("cases.filter_by.protection_concerns"), 'protection_concerns', Lookup.values('Protection Concerns', @lookups), { multi: true }, false) %>
     <% end %>
     <% if filters_to_show.include? 'Risk Level' %>
       <%= build_filter_checkboxes(t("cases.filter_by.risk_level"), 'risk_level', Lookup.values('Risk Level', @lookups)) %>
