--- a/app/views/home/_case_count_referred.html.erb
+++ b/app/views/home/_case_count_referred.html.erb
@@ -1,5 +1,5 @@
 <div><%= I18n.translate('dashboard.count_referrals_total',
-                   case_count({name: :referred, stat: :total, filter: index_filters(['child_status:Open', 'referred_users', 'record_state=true'])}, stats, model)).html_safe %>
+                   case_count({name: :referred, stat: :total, filter: index_filters(['child_status=Open', 'referred_users', 'record_state=true'])}, stats, model)).html_safe %>
 <%= I18n.translate('dashboard.count_referrals_new',
                    case_count({name: :referred, stat: :new,
                                filter: index_filters(['child_status=Open', 'new', 'referred_users', 'record_state=true'])}, stats, model)).html_safe %>
