--- a/app/views/home/_case_count_risk_totals.html.erb
+++ b/app/views/home/_case_count_risk_totals.html.erb
@@ -12,7 +12,7 @@
                          {
                             name: :risk_level,
                             stat: :high,
-                            filter: index_filters(['child_status=Open', 'risk_level=High', 'new', 'record_state=true']),
+                            filter: index_filters(['child_status=Open', 'risk_level=High', 'new_other', 'record_state=true']),
                             stat_type: 'high'
                          }, stats, model)).html_safe %>
 </div>
@@ -30,7 +30,7 @@
                          {
                              name: :risk_level,
                              stat: :medium,
-                             filter: index_filters(['child_status=Open', 'risk_level=Medium', 'new', 'record_state=true']),
+                             filter: index_filters(['child_status=Open', 'risk_level=Medium', 'new_other', 'record_state=true']),
                              stat_type: 'medium'
                          }, stats, model)).html_safe %>
 </div>
@@ -48,7 +48,7 @@
                          {
                              name: :risk_level,
                              stat: :low,
-                             filter: index_filters(['child_status=Open', 'risk_level=Low', 'new', 'record_state=true']),
+                             filter: index_filters(['child_status=Open', 'risk_level=Low', 'new_other', 'record_state=true']),
                              stat_type: 'low'
                          }, stats, model)).html_safe %>
 </div>
