--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -9,10 +9,10 @@
                 <li><%= link_to t("navigation.cases"), cases_path(scope: {:child_status => "list||Open", :record_state => "list||true"}), class: current_menu("cases") %></li>
               <% end  %>
               <% if can? :read, TracingRequest %>
-                <li><%= link_to t("navigation.tracing_request"), tracing_requests_path, class: current_menu("tracings") %></li>
+                <li><%= link_to t("navigation.tracing_request"), tracing_requests_path(scope: {:inquiry_status => "list||Open", :record_state => "list||true"}), class: current_menu("tracings") %></li>
               <% end  %>
               <% if can? :read, Incident %>
-                <li><%= link_to t("navigation.incidents"), incidents_path, class: current_menu("incidents") %></li>
+                <li><%= link_to t("navigation.incidents"), incidents_path(scope: {:status => "list||Open", :record_state => "list||true"}), class: current_menu("incidents") %></li>
               <% end  %>
               <% if current_user_name==nil or can? :manage, FormSection %>
                 <li><%= link_to t("navigation.forms"), form_sections_path, class: current_menu("forms") %></li>
