added approve case plan modal.  WIP.  Added approve case plan to permission and roles

--- a/app/views/children/_show_child_toolbar.html.erb
+++ b/app/views/children/_show_child_toolbar.html.erb
@@ -32,6 +32,9 @@
           <%= render 'record_shared/mark_for_mobile_button', instance: @child, mobile_value: true  %>
           <%= render 'record_shared/mark_for_mobile_button', instance: @child, mobile_value: false  %>
         <% end %>
+        <% if can?(:approve_case_plan, controller.model_class) %>
+          <%= render 'record_shared/approve_case_plan_button', instance: @child %>
+        <% end %>
     </ul>
   </li>
 </ul>
