--- a/app/views/home/_case_admin_district_totals.html.erb
+++ b/app/views/home/_case_admin_district_totals.html.erb
@@ -1,7 +1,7 @@
 <div class="panel">
   <div class="panel_header">
     <h4><%= t('dashboard.case_stats') %></h4>
-    <table cellspacing="0" cellpadding="0" class="table-floating-header">
+    <table cellspacing="0" cellpadding="0" class="table-counts table-floating-header">
       <thead>
       <tr>
         <th>
@@ -28,7 +28,7 @@
   </div>
   <div class="panel_content no-padding panel_main">
     <% if district_stats.present? %>
-      <table cellspacing="0" cellpadding="0" class="table-floating-header extra">
+      <table cellspacing="0" cellpadding="0" class="table-counts table-floating-header extra">
         <tbody>
           <% #TODO: we cannot rely on 'district' always being there. SL-specific code %>
           <% district_stats.each do |key, val| %>
