--- a/app/views/children/edit.html.erb
+++ b/app/views/children/edit.html.erb
@@ -29,6 +29,10 @@
         <%= hidden_field_tag('child[base_revision]', @child._rev) %>
         <% # TODO: this may change once we decide how to handle the Record Owner form %>
         <%= hidden_field_tag('child[record_state]', @child.record_state) %>
+        <%= hidden_field_tag('child[owned_by]', @child.owned_by) %>
+        <%= hidden_field_tag('child[created_by]', @child.created_by) %>
+        <%= hidden_field_tag('child[previously_owned_by]', @child.previously_owned_by) %>
+        <%= hidden_field_tag('child[module_id]', @child.module_id) %>
         <% @form_sections.each do |form_group_name, form_list| %>
           <%= render :partial => 'form_section/form_section', :collection => form_list,  :locals => {:formObject => @child, :form_group_name => form_group_name} %>
         <% end %>
