--- a/app/views/tracing_requests/new.html.erb
+++ b/app/views/tracing_requests/new.html.erb
@@ -7,6 +7,7 @@
 <%= form_tag tracing_requests_path, :multipart => true, :class => "default-form data-form", :autocomplete => "off" do %>
     <div class="page-content-new row collapse">
   	<%= hidden_field_tag "tracing_request[posted_from]", "Browser" %>
+    <%= hidden_field_tag('tracing_request[module_id]', @tracing_request.module_id) %>
       <div class="large-4 medium-4 columns close-side-tab side-tab-container">
         <div class="side-tab">
           <%= render :partial => 'form_section/tabs', :object => @form_sections %>
