--- a/app/views/children/new.html.erb
+++ b/app/views/children/new.html.erb
@@ -8,8 +8,7 @@
 
 <%= form_tag children_path, :multipart => true, :class => "default-form data-form", :autocomplete => "off" do %>
     <div class="page-content-new row collapse">
-  	<%= hidden_field_tag "child[posted_from]", "Browser" %>
-    <%= hidden_field_tag('child[module_id]', @child.module_id) %>
+      <%= render :partial => 'children/required_fields' %>
       <div class="large-4 medium-4 columns close-side-tab side-tab-container">
         <div class="side-tab">
           <%= render :partial => 'form_section/tabs', :object => @form_sections %>
