--- a/app/views/incidents/edit.html.erb
+++ b/app/views/incidents/edit.html.erb
@@ -26,13 +26,7 @@
 
     <div class="large-8 medium-8 columns side-tab-content-container">
       <div class="side-tab-content">
-        <%= hidden_field_tag('incident[base_revision]', @incident._rev) %>
-        <% # TODO: this may change once we decide how to handle the Record Owner form %>
-        <%= hidden_field_tag('incident[record_state]', @incident.record_state) %>
-        <%= hidden_field_tag('incident[owned_by]', @incident.owned_by) %>
-        <%= hidden_field_tag('incident[created_by]', @incident.created_by) %>
-        <%= hidden_field_tag('incident[previously_owned_by]', @incident.previously_owned_by) %>
-        <%= hidden_field_tag('incident[module_id]', @incident.module_id) %>
+        <%= render :partial => 'incidents/required_fields' %>
         <% @form_sections.each do |form_group_name, form_list| %>
           <%= render :partial => 'form_section/form_section', :collection => form_list,  :locals => {:formObject => @incident, :form_group_name => form_group_name} %>
         <% end %>
