--- a/app/views/incidents/new.html.erb
+++ b/app/views/incidents/new.html.erb
@@ -8,8 +8,7 @@
 
 <%= form_tag incidents_path, :multipart => true, :class => "default-form data-form new-incident-form", :autocomplete => "off" do %>
     <div class="page-content-new row collapse">
-  	<%= hidden_field_tag "incident[posted_from]", "Browser" %>
-    <%= hidden_field_tag('incident[module_id]', @incident.module_id) %>
+      <%= render :partial => 'incidents/required_fields' %>
       <div class="large-4 medium-4 columns close-side-tab side-tab-container">
         <div class="side-tab">
           <%= render :partial => 'form_section/tabs', :object => @form_sections %>
