--- a/app/views/children/edit.html.erb
+++ b/app/views/children/edit.html.erb
@@ -16,7 +16,7 @@
 
 <div class="clearfix"></div>
 
-<%= form_tag child_path(@child), :method => :put, :multipart => true, :class => "edit-profile default-form data-form", :autocomplete => "off" do %>
+<%= form_tag child_path(@child), :method => :put, :multipart => true, :class => "edit-profile default-form data-form", :autocomplete => "off", "data-abide" => '' do %>
   <div class="page-content-new row collapse">
     <div class="large-4 medium-4 columns close-side-tab side-tab-container">
       <div class="side-tab">
