SL-362: header for district

--- a/app/views/home/_case_admin_district_totals.html.erb
+++ b/app/views/home/_case_admin_district_totals.html.erb
@@ -5,7 +5,7 @@
       <thead>
       <tr>
         <th>
-
+          <%= t('dashboard.geographic_area') %>
         </th>
         <th>
           <%= t('dashboard.open_cases').html_safe %>
