--- a/app/views/home/_case_protection_concerns.html.erb
+++ b/app/views/home/_case_protection_concerns.html.erb
@@ -11,7 +11,7 @@
           <%= t('dashboard.all_cases').html_safe %>
         </th>
         <th>
-          <%= t('dashboard.open').html_safe %>
+          <%= t('dashboard.open_cases').html_safe %>
         </th>
         <th>
           <%= t('dashboard.new_this_week').html_safe %>
