Cleaning up record id styling.

--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -35,7 +35,8 @@ $(function() {
 <% end %>
 
 <% content_for :breadcrumbs do %>
-  <%= t("incident.label") %> #<%= text_to_identify_incident(@incident) %>
+  <div class="label"><%= t("incident.label") %></div>
+  #<%= text_to_identify_incident(@incident) %>
 <% end %>
 
 <% content_for :header_message do %>
