--- a/app/views/children/edit.html.erb
+++ b/app/views/children/edit.html.erb
@@ -7,7 +7,8 @@
 <% end %>
 
 <% content_for :breadcrumbs do %>
-    <%= t("case.label") %> #<%= text_to_identify_child(@child) %>
+  <div class="label"><%= t("case.label") %></div>
+  #<%= text_to_identify_child(@child) %>
 <% end %>
 
 <% content_for :header_message do %>
