--- a/app/views/children/show.html.erb
+++ b/app/views/children/show.html.erb
@@ -35,7 +35,8 @@ $(function() {
 <% end %>
 
 <% content_for :breadcrumbs do %>
-  <%= t("case.label") %> #<%= text_to_identify_child(@child) %>
+  <div class="label"><%= t("case.label") %></div>
+  #<%= text_to_identify_child(@child) %>
 <% end %>
 
 <% content_for :header_message do %>
