--- a/app/views/incidents/edit.html.erb
+++ b/app/views/incidents/edit.html.erb
@@ -7,7 +7,8 @@
 <% end %>
 
 <% content_for :breadcrumbs do %>
-  <%= t("incident.label") %> #<%= text_to_identify_incident(@incident) %>
+  <div class="label"><%= t("incident.label") %></div>
+  #<%= text_to_identify_incident(@incident) %>
 <% end %>
 
 <% content_for :header_message do %>
