--- a/app/assets/stylesheets/primero/page.scss
+++ b/app/assets/stylesheets/primero/page.scss
@@ -240,6 +240,15 @@ table.dataTable.dtr-inline.collapsed tbody tr.parent th:first-child:before {
   margin-bottom: 10px;
 }
 
+.modal-scroll {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 9999;
+  overflow: scroll;
+}
+
 .loading-screen {
   display: none;
 
