--- a/app/views/record_shared/_header_message.html.erb
+++ b/app/views/record_shared/_header_message.html.erb
@@ -3,23 +3,23 @@
     <div id="interviewer_details">
       <!-- record state -->
       <p>
-        <%= t("record_panel.record_state") %>:
+        <span><%= t("record_panel.record_state") %>:</span>
         <%= record.record_state ? t("record_panel.valid") : t("record_panel.invalid") %>
       </p>
       <!-- creator -->
       <p>
-        <%= t("record_panel.created_by") %>:
+        <span><%= t("record_panel.created_by") %>:</span>
         <%= record.created_by_full_name %><br>
         <%= field_format_date(record.created_at) %>
       </p>
       <!-- last updated -->
       <p>
-        <%= t("record_panel.last_update") %>:
+        <span><%= t("record_panel.last_update") %>:</span>
         <%= field_format_date(record.last_updated_at) %>
       </p>
       <!-- current owner -->
       <p>
-        <%= t("record_panel.current_owner") %>:
+        <span><%= t("record_panel.current_owner") %>:</span>
         <%= record.owner ? record.owner.full_name : 'None' %>
       </p>
       <hr>
