--- a/app/views/reports/_report_filter.html.erb
+++ b/app/views/reports/_report_filter.html.erb
@@ -1,5 +1,6 @@
 <%
   hidden = false
+  null_constraint = [t('report.filters.not_null'), 'not_null']
   if report_filter.nil?
     index = 'template'
     hidden = true
@@ -40,11 +41,12 @@
       <div class="medium-11 columns end">
         <select class="<%= hidden ? 'report_filter_input_template' : 'report_filter_input' %>"
                 data-placeholder="<%= t('fields.select_box_empty_item') %>"
+                data-not-null-translation="<%= t('report.filters.not_null') %>"
                 id="<%= "report_filters_#{index}_value_str"%>"
                 name="<%= "report[filters][#{index}][value][]" %>"
                 multiple="multiple">
           <%= options_for_select(
-                lookups_list_from_field(Field.find_by_name(attribute)),
+                lookups_list_from_field(Field.find_by_name(attribute)).unshift(null_constraint),
                 value
               )
           %>
@@ -54,14 +56,14 @@
   <% end %>
   <% if (type == 'date_field') || hidden %>
     <div class="report_filter_value_date_row form_date_field" style="<%= hidden ? 'display: none;':'' %>">
-      <div class="medium-2 columns">
+      <div class="medium-5 columns">
         <select class="<%= hidden ? 'report_filter_input_template' : 'report_filter_input' %>"
                 id="<%= "report_filters_#{index}_constraint"%>"
                 name="<%= "report[filters][#{index}][constraint]" %>">
-          <%= options_for_select(['', '=', '<', '>'], constraint) %>
+          <%= options_for_select(['', null_constraint, '=', '<', '>'], constraint) %>
         </select>
       </div>
-      <div class="medium-9 columns end">
+      <div class="medium-6 columns end">
         <input class="<%= hidden ? 'report_filter_input_template' : 'report_filter_input' %>"
                type="text"
                id="<%= "report_filters_#{index}_value_num"%>"
