SL-396: add Agency to user list

--- a/app/views/users/_users_header.html.erb
+++ b/app/views/users/_users_header.html.erb
@@ -1,6 +1,7 @@
 <tr>
   <th><%= t("user.full_name") %></th>
   <th><%= t("login.username") %></th>
+  <th><%= t("user.agency") %></th>
   <% if can?(:disable, User) %>
     <th><%= t("user.disabled") %></th>
   <% end %>
