--- a/app/views/users/_users_table.html.erb
+++ b/app/views/users/_users_table.html.erb
@@ -9,7 +9,7 @@
     <div class="medium-6 columns">
       <div class="float_left">
         <small class="scope_label"><%= t("users.sort_by.label") %></small>
-        <%= select_tag :sort, options_for_select([[t("users.sort_by.full_name"),"full_name"],[ t("login.username"), "user_name"]], params[:sort]), { :onchange => "this.form.submit();"} %>
+        <%= select_tag :sort, options_for_select([[t("users.sort_by.full_name"),"full_name"],[ t("login.username"), "user_name"], [t("users.sort_by.agency"),"organization"]], params[:sort]), { :onchange => "this.form.submit();"} %>
       </div>
     </div>
   </div>
