--- a/app/views/form_section/_form_section.html.erb
+++ b/app/views/form_section/_form_section.html.erb
@@ -1,5 +1,8 @@
-
-<fieldset id="tab_<%= form_section.section_name %>" class="<%= form_section.section_name %> tab no-border" data-first-tab="<%= form_section.is_first_tab %>">
+<fieldset id="tab_<%= form_section.section_name %>" class="<%= form_section.section_name %> tab no-border"
+          data-first-tab="<%= form_section.is_first_tab %>"
+          data-form-section-id="<%= form_section.section_name %>"
+          data-form-section-group-name="<%= form_section.name != form_section.form_group_name ? form_section.form_group_name : "" %>"
+          data-form-name="<%= t(form_section.unique_id, :default => form_section.name) %>">
   <div class="clearfix"></div>
   <%= render 'form_section/error_message', formObject: formObject %>
 
