--- a/app/views/form_section/_textarea.html.erb
+++ b/app/views/form_section/_textarea.html.erb
@@ -11,7 +11,8 @@
       </span>
   </div>
   <div class="medium-8 columns">
-    <%= text_area_tag name, value, :disabled => textarea.editable == false ? true : false, :id => field_id, :editable => textarea.editable, rows: "2" %>
+    <% if textarea.required %><span class="required form-section-required">*</span><% end %>
+    <%= text_area_tag name, value, :disabled => textarea.editable == false ? true : false, :id => field_id, :editable => textarea.editable, rows: "2", required: textarea.required %>
     <% if textarea.help_text %><p class="help"><%= textarea.help_text %></p><% end %>
     <% if textarea.guiding_questions.present? %>
       <%= link_to(t('buttons.guiding_questions'), '', class: 'gq_popovers', tabindex: '0', 
