--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,6 +80,10 @@
     model_object: "<%= controller.controller_name.singularize %>",
     current_action: "<%= controller.action_name %>",
     discard_message: "<%= t('messages.record_navigation_confirmation_message', default: 'Discard unsaved changes?') %>",
+    form_error_messages: {
+      required: "<%= t('form_section.required_field_js') %>",
+      form_message: "<%= t('errors.template.header.body_js')%>"
+    },
     Views: {}
   };
 </script>
