--- a/app/views/reports/_toolbar.html
+++ b/app/views/reports/_toolbar.html
@@ -12,6 +12,9 @@
         <div class="row">
           <div class="large-12 columns">
             <ul class="inline-list">
+              <li>
+                <%= link_to t("buttons.back"), reports_path, class: 'btn green-button' %>
+              </li>
               <% if controller.action_name != 'edit' %>
                 <ul id="menu" class="sf-menu">
                   <li class="init_btn">
